--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,23 +1,17 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.08.2024 14:40:41</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 12.08.2024 07:02:51</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
 <td>
-<table class="table"><table class="table">
+<table class="table"><tr><td class="menuWeight"></td><td class="menuName"></td><td class="menuPrice"></td></tr><table class="table">
 <tbody>
-<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
+<h5 class="border_box_title">Polévky </h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar s celestýnskými nudlemi a zeleninou</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rajčatový krém se šlehačkou a rukolovým pestem</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky </h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar s nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zelná s uzeninou</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Cibulový krém s krutony</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažené holandské řízky, vídeňský bramborový salát</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí guláš s cibulí a feferonkou, naše bramboráčky</td><td class="menuPrice">164,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí stroganoff se smetanou, dušená jasmínová rýže</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pomalu pečené kachní výpečky, restované šišky s cibulkou, dušené bílé zelí</td><td class="menuPrice">164,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny Linguine "PUTANESCA" (tomatová omáčka s kapary a olivy), strouhaný parmazán</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: Dorůžova pečená vepřová panenka, mrkvové a hráškové pyré, strouhaný parmazán</td><td class="menuPrice">185,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na jemné houbové omáčce, krokety</td><td class="menuPrice">164,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše kynuté ovocné knedlíky (jahoda, meruňka, borůvka), vanilková omáčka, strouhaný tvaroh, šlehačka, karamel</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů ochucený majonézovým dresinkem, filírované kuřecí prso, restovaná anglická slanina, vařené vejce, strouhaný parmazán </td><td class="menuPrice">162,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Mix gril za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Mix gril z vepřové panenky, kuřecích prsou, vepřové pečeně a klobásky s cibulí, smažené plátky brambor, volské oko</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše dezerty</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Quasedilla plněná vepřovým trhaným masem, sýrem, jalapeňos, kukuřicí a anglickou slaninou, hranolky, tatarka</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřový guláš s cibulí, beraním rohem a feferonkou, naše bramboráčky</td><td class="menuPrice">163,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Plněný paprikový lusk v rajské omáčce, kynuté houskové knedlíky</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená sekaná, vařené brambory s máslem a šnitlíkem, hořčice, cibule a kyselá okurka</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: Medailonky z kuřecích prsou na grilu s grilovanou zeleninou, volské oko, strouhaný parmazán, zakysaná smetana</td><td class="menuPrice">185,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené žampiony, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Nudličky z kuřecích prsou se zeleniou, chilli a smetanou, krokety</td><td class="menuPrice">162,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Steak z vepřové kotlety bez kosti na pepřové omáčce, gratinované brambory se smetanou</td><td class="menuPrice">187,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů ochucený olivovým olejem, restovaná anglická slanina s cherry rajčátky, vařené vejce, grilovaný hermelín, brusinkové žervé </td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Mix gril za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Mix gril z vepřové panenky, kuřecích prsou, vepřové pečeně a klobásky s cibulí, smažené plátky brambor, volské oko</td><td class="menuPrice">139,-/184,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 14,-Kč. Staropramen 11° za 16,- Kč a Staropramen 12° za 18,-Kč.  </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 11° Albín Ale alk. 4,5% svrchně kvašené - pivovar Muflon</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,.</td></tr><tr><td class="menuWeight">0,3-0,3l</td><td class="menuName">Citonáda</td><td class="menuPrice">23,-/29,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Pokrmy obsahují alergeny. Informace o výskytu konkrétních alergenů v pokrmu žádejte u obsluhy</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,5l</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 14,-Kč. Staropramen 11° za 16,- Kč a Staropramen 12° za 18,-Kč.  </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 11° Albín Ale alk. 4,5% svrchně kvašené - pivovar Muflon</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52</td></tr><tr><td class="menuWeight">0,3l - 0,5l</td><td class="menuName">Citronáda</td><td class="menuPrice">23,-/29,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pokrmy obsahují alergeny. Informace o výskytu konkrétních alergenů v pokrmu žádejte u obsluhy</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -27,15 +21,16 @@
 <td>
 <div class="row denni-menu" style="max-width:100%; margin:auto; margin-top:70px;">
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2" style="padding:0px;"><img height="auto" src="https://mattesrestaurace.cz/img/vikend3.jpg?id=4" width="auto"/></div>
-<div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer0_a.js?v=" + Date.now() + "'><\/script>");</script>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
+<div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
+  position: relative;
+  top: -100px; 
+  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
 Volba Sládků<br>
 Kozel tmavý<br>
 Cider Kingswood<br>
 <br>
 Letní zahrada<br>
-Vytápěna zimní zahrada</p><center>--></div></div>
+Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 </tr>
 </table>
@@ -45,9 +40,34 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–13:30</em></div>
-<div class="nadpis">Neděle 11.8.2024 </div>
+<div class="nadpis">Pondělí 12.8.2024 </div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<span class="popup-gallery"><li class="polevka">
+<div class="polozka">Hrachová polévka s uzeným masem 1</div>
+<div class="cena">40 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Kuřecí řízek v tandoori těstíčku, šťouchané brambory s mladou cibulkou, zelný salátek s čerstvým zázvorem 1, 3, 7</div>
+<div class="cena">175 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Hovězí burrito wrap, jalapeňos papričky, kukuřice, steakové hranolky 1, 7 </div>
+<div class="cena">175 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>150g Vepřové nudlička na červeném víně a kořenové zelenině, bramborové knedlíky 1, 3, 7, 12</div>
+<div class="cena">175 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>350g Pohankové rizoto s mrkví na másle, grilovanými žampióny a sýrem 7</div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</span> </ul>
 </div>
 </td>
 </tr>
@@ -58,9 +78,29 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Neděle 11.8.2024 </div>
+<div class="nadpis">Pondělí 12.8.2024 </div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<span class="popup-gallery"><li class="polevka">
+<div class="polozka">Frankfurtská</div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>Houbové rissoto sypané parmazánem</div>
+<div class="cena">140 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>Quesadilla s trhaným masem a cheddarem</div>
+<div class="cena">140 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>Salát s uzeným lososem a avokádem</div>
+<div class="cena">140 Kč</div>
+<div class="clear"></div>
+</li>
+</span> </ul>
 </div>
 </td>
 </tr>
@@ -81,8 +121,72 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <div class="inner">
 <h4 class="headline">POLEDNÍ MENU</h4>
 <div class="bookmarks cond">
+<div class="item js-bookmark active">
+<a class="link js-bookmark-switcher" href="#day_23003">Pondělí 12. 08.</a>
 </div>
-<p class="no-meals">Každý pracovní den je pro vás v naší Šalandě nachystáno polední menu. Ne vždy ho ale stačíme nahrát na web.</p>
+</div>
+<table class="list js-bookmark-block" id="day_23003" style="display:table;">
+<tr>
+<td class="volume"></td>
+<td class="name">
+<span class="title cond">Dýňový krém </span>
+<span class="allergen">(A: 1, 3, 7)</span>
+<p class="desc">s krutony </p>
+</td>
+<td class="price cond">
+        55 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Kuřecí maso na Thajském červeném kari </span>
+<span class="allergen">(A: 6, 7, 9)</span>
+<p class="desc">se zázvorovou rýží</p>
+</td>
+<td class="price cond">
+        179 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Holandský řízek, </span>
+<span class="allergen">(A: 1, 3, 7)</span>
+<p class="desc">bramborová kaše a kyselá okurka</p>
+</td>
+<td class="price cond">
+        179 Kč    </td>
+</tr>
+<tr>
+<td class="volume">350g</td>
+<td class="name">
+<span class="title cond">Dýňové rizoto </span>
+<span class="allergen">(A: 1, 7)</span>
+<p class="desc">s šalvějí a parmazánem</p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">300g</td>
+<td class="name">
+<span class="title cond">Caesar salát </span>
+<span class="allergen">(A: 1, 3, 4, 7, 10)</span>
+<p class="desc">s kuřecím masem </p>
+</td>
+<td class="price cond">
+        179 Kč    </td>
+</tr>
+<tr>
+<td class="volume">350g</td>
+<td class="name">
+<span class="title cond">Smetanové tagliatelle </span>
+<span class="allergen">(A: 1, 3, 4, 7)</span>
+<p class="desc">s lososem a baby špenátem </p>
+</td>
+<td class="price cond">
+        189 Kč    </td>
+</tr>
+</table>
 </div>
 </section>
 </td>
