--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 12.08.2024 08:35:59</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 12.08.2024 09:02:43</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -24,13 +24,7 @@
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
   position: relative;
   top: -100px; 
-  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
-Volba Sládků<br>
-Kozel tmavý<br>
-Cider Kingswood<br>
-<br>
-Letní zahrada<br>
-Vytápěna zimní zahrada</p><center>--></div></div></div>
+  visibility: hidden;"></a><br/><table class="dm"></table><br/></div></div>
 </td>
 </tr>
 </table>
@@ -109,7 +103,7 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <section id="Rybarna"></section><a href="#top">&#8635;</a><tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z cerstveho jihoceskeho kapra {prorezavany, bez kosti} s citronem a olivami, libanonsky krupkovy salat s cerstvymi rajcaty, petrzelkou a citronem {L} 169</li><li>Peceny filet z cerstveho morskeho vlka s citronem a olivami, libanonsky krupkovy salat s cerstvymi rajcaty, petrzelkou a citronem {L} 205</li><li>Dwaejigogi bokkeum – pikantni korejske veprove s gochujang {korejska miso chilli pasta}, cesnekem, sezamem a zelenou cibulkou, jasminova ryze, pikantni kvasena zelenina 169</li><li>Italske syrove rizoto s petrzelkou a kralikem dusenym na bilem vine s rajcaty se zeleninou, salatek 195</li><li>Ratatouille z cerstve letni zeleniny s bazalkou, cizrnovy hummus se sumachem, sazene vejce, salatek 169</li></ol>
+<ol><li>Smazeny filet z cerstve norske tresky, cockovy salat s paprikami, rajcaty, cuketami a zelenymi bylinkami, citron {L} 175</li><li>Peceny cerstvy morsky vlk se susenymi rajcaty a bylinkovym pestem, cockovy salat s paprikami, rajcaty, cuketami a zelenymi bylinkami 195</li><li>Kureci tikka masala s rajcaty, smetanovym jogurtem, zazvorem, varenymi baby bramborami a koriandrem, jasminova ryze 169</li><li>Grilovane medailonky z danci kyty s hruskovym catny, pecene brambory, salatek z cervene repy 205</li><li>Zapecena cuketa plnena cervenou cockou s rajcaty a zelenymi bylinkami, sypana lnenym seminkem, jogurtovy dip, salatek 169</li></ol>
 </td>
 </tr>
 </table>
